# CWindow

./: CMakeLists.txt
docs/: README.md  todo.md
include/: event.h  input.h  window.h
src/: log.h  main.cpp  window.cpp
src/platform/: internal.h
src/platform/windows/: win32_window.cpp
src/platform/x11/: x11_error.h  x11_input.cpp  x11_input.h  x11_window.cpp  x11_window.h
